namespace Spirit604.DotsCity.Simulation.Pedestrian.State
{
    public static class AnimatorConstans
    {
        public const string ANIMATOR_SITTING_KEY = "IsSitting";
        public const string ANIMATOR_MOVEMENT_KEY = "yInput";
        public const string ANIMATOR_TALKING_KEY = "Talking";

        public const float ANIMATOR_WALK_PARAMETER = 0.3F;
    }
}
